--- a/data/style.css
+++ b/data/style.css
@@ -1,23 +1,82 @@
-header {
-  background: #212121;
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  font-family: arial, sans-serif;
 }
 
-.nav {
+.status {
   display: flex;
   align-items: center;
-  gap: 10px;
-  list-style: none;
-  padding: 18px 16px;
-  margin: 0;
+  margin-bottom: 20px;
 }
 
-.nav a {
-  text-decoration: none;
+.status-dot {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  margin-right: 6px;
+  margin-top: 1px;
+}
+
+.status-dot.up {
+  background-color: green;
+}
+
+.status-dot.down {
+  background-color: red;
+}
+
+.status-dot.unknown {
+  background-color: gray;
+}
+
+.status-text {
+  margin-left: 4px;
+}
+
+.buttons {
+  display: grid;
+  gap: 20px;
+}
+
+.btn {
+  display: inline-block;
+  border: none;
+  border-radius: 4px;
   color: white;
+  padding: 16px 48px;
+  text-decoration: none;
+  font-size: 16px;
+  cursor: pointer;
+  width: 200px;
 }
 
-.container {
-  width: 100%;
-  max-width: 1024px;
-  padding: 0 16px;
+.btn-primary {
+  background-color: #008cba;
+}
+
+.btn-primary:hover {
+  background-color: #0099cc;
+}
+
+.btn-danger {
+  background-color: #f44336;
+}
+
+.btn-danger:hover {
+  background-color: #ff4a3d;
+}
+
+@media screen and (max-width: 600px) {
+  h1 {
+    font-size: 28px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  h1 {
+    font-size: 24px;
+  }
 }
