--- a/data/style.css
+++ b/data/style.css
@@ -46,7 +46,7 @@
   border: none;
   border-radius: 4px;
   color: white;
-  padding: 16px 48px;
+  padding: 12px 48px;
   text-decoration: none;
   font-size: 16px;
   cursor: pointer;
@@ -67,6 +67,13 @@
 
 .btn-danger:hover {
   background-color: #ff4a3d;
+}
+
+.horizontal-line {
+  height: 1px;
+  background-color: #333;
+  width: 100%;
+  margin: 4px 0;
 }
 
 @media screen and (max-width: 600px) {
